# aws-lambda-rust

./: Cargo.toml  justfile
.github/scripts/: build.bash  deploy.bash  prelude.bash
.github/workflows/: deploy.yaml
.terraform/: 0-provider.tf  1-variables.tf  2-bucket.tf  3-lambda.tf
env/: default.env
