[package]
name = "aws-lambda-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.*"
lambda_runtime = "0.*"
serde = "1"
tokio = { version = "1", features = ["macros"] }

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
